# ChangeLog for dev-lang/mono
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/mono/ChangeLog,v 1.136 2008/03/02 19:34:27 compnerd Exp $

  02 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  mono-1.1.16.1.ebuild, mono-1.2.2.1.ebuild, mono-1.2.3.1.ebuild,
  mono-1.2.4.ebuild, mono-1.2.5.ebuild, mono-1.2.5.1.ebuild,
  mono-1.2.5.1-r1.ebuild:
  fix some quoting issues

  02 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  mono-1.2.6-r2.ebuild:
  Fix patch naming issue (bug #212083)

*mono-1.2.6-r2 (02 Mar 2008)

  02 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/mono-1.2.6-bug-347359.patch, +mono-1.2.6-r2.ebuild:
  Revbump with a minor patch from svn for bug #210429

*mono-1.2.6-r1 (02 Jan 2008)

  02 Jan 2008; Jurek Bartuszek <jurek@gentoo.org>
  +files/mono-1.2.6-threads-types-private-prototypes.patch,
  +mono-1.2.6-r1.ebuild:
  Added patch fixing bug #202358

*mono-1.2.6 (14 Dec 2007)

  14 Dec 2007; Jurek Bartuszek <jurek@gentoo.org> +mono-1.2.6.ebuild:
  Version bump (bug #202191)

  06 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  mono-1.2.5.1-r1.ebuild:
  Stable on amd64 wrt bug #197067.

  06 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mono-1.2.5.1-r1.ebuild:
  ppc stable, bug #197067

  04 Nov 2007; Dawid Węgliński <cla@gentoo.org> mono-1.2.5.1-r1.ebuild:
  Stable on x86 (bug #197067)

*mono-1.2.5.1-r1 (03 Nov 2007)

  03 Nov 2007; Jurek Bartuszek <jurek@gentoo.org>
  +files/mono-biginteger_overflow.diff, +mono-1.2.5.1-r1.ebuild:
  Version bump (bug #197067)

*mono-1.2.5.1 (20 Sep 2007)

  20 Sep 2007; Jurek Bartuszek <jurek@gentoo.org> -mono-1.2.5-r1.ebuild,
  +mono-1.2.5.1.ebuild:
  Version bump

*mono-1.2.5-r1 (11 Sep 2007)

  11 Sep 2007; Jurek Bartuszek <jurek@gentoo.org>
  +files/mono-1.2.5-remoting.patch, +mono-1.2.5-r1.ebuild:
  Fixed issues with remoting (bug #192120)
