@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/mono
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/mono/ChangeLog,v 1.136 2008/03/02 19:34:27 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/mono/ChangeLog,v 1.137 2008/05/19 09:48:24 drac Exp $
+
+  19 May 2008; Samuli Suominen <drac@gentoo.org> mono-1.1.16.1.ebuild:
+  Move pkgconfig to DEPEND.
 
   02 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
   mono-1.1.16.1.ebuild, mono-1.2.2.1.ebuild, mono-1.2.3.1.ebuild,
